# submittal-verifier

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: example_report.html
samples/: spec_096813.txt  submittal_096813.txt
speccheck/: __init__.py  cli.py  extract.py  llm.py  models.py  parse_pdf.py  report.py  resubmittal.py  store.py  verify.py  web.py
tests/: test_cli.py  test_extract.py  test_llm.py  test_parse_pdf.py  test_report.py  test_resubmittal.py  test_verify.py  test_web.py
